GNOME Bugzilla – Bug 756926
kms-winsys: don't wait for a flip when page flipping fails
Last modified: 2017-02-20 08:19:55 UTC
If we get EACCES from drmPageFlip we're not going to get a flip event and shouldn't wait for one. This commit changes the EACCES path to silently ignore the failed flip request and just clean up the fb.
Created attachment 313827 [details] [review] kms-winsys: don't wait for a flip when page flipping fails
downstream bug: https://bugzilla.redhat.com/show_bug.cgi?id=1272737
Review of attachment 313827 [details] [review]: Looks good to me.
Attachment 313827 [details] pushed as b78052f - kms-winsys: don't wait for a flip when page flipping fails
*** Bug 758112 has been marked as a duplicate of this bug. ***
This was committed to master, but not to the 1.22 branch. Could this also be committed to the 1.22 branch?
Ignore previous remark, it was included.
IIRC, there was a follow up fix after this but cant check right now. If so, could be it didnt make it to a branch.
It also doesn't really matter unless you're trying to use a version of Mutter prior to 3.20; nothing else uses the KMS backend of Cogl, and after 3.20 Mutter includes its own copy of Cogl anyway.
I'll have the user file a new bugreport on GNOME Bugzilla. We're running latest mutter (3.22.something) that was released a few days ago. https://bugs.mageia.org/show_bug.cgi?id=20261 > Ending a GNOME session under Wayland results in a black screen of death > (monitor is going forever to power saving mode). No inputs (keyboard and mouse) > can wake it up, though magic SysRq are still working to reboot the computer. etc. User thought it might be this bug. Apparently not.